--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eid Zakat</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Manrope&family=Montserrat&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="headercontainer">
+            <div class="headercontent">
+                <h1>Let’s Finish your
+                    internal Evil</h1>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, sint necessitatibus? Dolores ullam tempora vero, illo nostrum quo nobis error.</p>
+            </div>  
+            <a class="link-button" href="http://">Donate Now</a>         
+        </div>
+    </header>
 </body>
 </html>
