--- a/index.html
+++ b/index.html
@@ -15,11 +15,43 @@
         <div class="headercontainer">
             <div class="headercontent">
                 <h1>Let’s Finish your
-                    internal Evil</h1>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, sint necessitatibus? Dolores ullam tempora vero, illo nostrum quo nobis error.</p>
-            </div>  
-            <a class="link-button" href="http://">Donate Now</a>         
+                        internal Evil</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, sint necessitatibus? Dolores ullam tempora vero, illo nostrum quo nobis error.</p>  
+                <a class="link-button" href="http://">Donate Now</a>     
+            </div>    
         </div>
     </header>
+    <main>
+        <section>
+            <div class="contentpart">
+                <h2>Their lives depend on
+                    your donation
+                    </h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, sint necessitatibus? Dolores ullam tempora vero, illo nostrum quo nobis error.</p>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, vel excepturi obcaecati quos laudantium fuga!
+                </p> 
+                <a class="link-button" href="http://">Explore More</a>
+            </div>
+            <div class="videopart">
+                <iframe width="400" height="380" src="https://www.youtube.com/embed/TwNU9dFRFe4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section>
+            <div class="imgpart">
+                <img src="./img/zakat.jpg" alt="">
+            </div>
+            <div class="contentpart">
+                <h2>They need us
+                    to suvive
+                    </h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, sint necessitatibus? Dolores ullam tempora vero, illo nostrum quo nobis error.</p>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, vel excepturi obcaecati quos laudantium fuga!
+                </p> 
+                <a class="link-button" href="http://">Explore More</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
