add another artical help

--- a/index.html
+++ b/index.html
@@ -52,6 +52,52 @@
                 <a class="link-button" href="http://">Explore More</a>
             </div>
         </section>
+        <article>
+            <div class="description">
+                <h1>Their lives depend on
+                    your donation</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam maxime neque praesentium a expedita odit?</p>
+            </div>
+            <div class="direct-help">
+                <div class="direct-help-left">
+                    <div class="direct-help-content">
+                        <img src="./img/icon.png" alt="">
+                        <div class="content-des">
+                            <h2>Direct Help</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ab. Iure, sint iste! Libero, ipsam.</p>
+                        </div>
+                    </div>
+                    <div class="direct-help-content">
+                        <img src="./img/icon.png" alt="">
+                        <div class="content-des">
+                            <h2>Direct Help</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ab. Iure, sint iste! Libero, ipsam.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="direct-help-right">
+                    <div class="direct-help-content">
+                        <img src="./img/icon.png" alt="">
+                        <div class="content-des">
+                            <h2>Direct Help</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ab. Iure, sint iste! Libero, ipsam.</p>
+                        </div>
+                    </div>
+                    <div class="direct-help-content">
+                        <img src="./img/icon.png" alt="">
+                        <div class="content-des">
+                            <h2>Direct Help</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ab. Iure, sint iste! Libero, ipsam.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <section class="imgsection">
+            <img src="./img/Screenshot_1.png" alt="">
+            <img src="./img/Screenshot_1.png" alt="">
+            <img src="./img/Screenshot_1.png" alt="">
+        </section>
     </main>
 </body>
 </html>
