--- a/index.html
+++ b/index.html
@@ -98,6 +98,38 @@
             <img src="./img/Screenshot_1.png" alt="">
             <img src="./img/Screenshot_1.png" alt="">
         </section>
+
+        <article>
+            <div class="description">
+                <h1>Extend Your Hand of Charity. Earn
+                    Rewards for the Hereafter</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam maxime neque praesentium a expedita odit?</p>
+            </div>
+            <div class="zakat-fund">
+                <div class="zakat-fund-card">
+                    <img src="./img/Screenshot_2.png" alt="">
+                    <h2>Zakat Fund</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ab. Iure, sint iste! Libero, ipsam.</p>
+                    <a href="">Donate for zakat</a>
+                </div>
+                <div class="zakat-fund-card">
+                    <img src="./img/Screenshot_2.png" alt="">
+                    <h2>Zakat Fund</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ab. Iure, sint iste! Libero, ipsam.</p>
+                    <a href="">Donate for zakat</a>
+                </div>
+                <div class="zakat-fund-card">
+                    <img src="./img/Screenshot_2.png" alt="">
+                    <h2>Zakat Fund</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ab. Iure, sint iste! Libero, ipsam.</p>
+                    <a href="">Donate for zakat</a>
+                </div>
+            </div>
+        </article>
     </main>
 </body>
+<footer>
+    <h1>Eid Ul Adha</h1>
+    <p>I’m gonna do it</p>
+</footer>
 </html>
